[gd_scene load_steps=3 format=4 uid="uid://cgi41w7nfs5i"]

[ext_resource type="Script" uid="uid://4ulybi50rrd1" path="res://Core/BroadCastManager/BroadCastManager.gd" id="1"]
[ext_resource type="FontFile" uid="uid://coqskwlqtnypf" path="res://Asset/Font/fzkt.ttf" id="2"]

[node name="BroadCastManager" type="Node"]
process_mode = 3
script = ExtResource("1")

[node name="BroaderCastLayer" type="CanvasLayer" parent="."]
layer = 50

[node name="Broad" type="ColorRect" parent="BroaderCastLayer"]
unique_name_in_owner = true
process_mode = 1
visible = false
z_index = 10
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.013
offset_top = -200.0
offset_bottom = -71.8
mouse_filter = 2
color = Color(0, 0, 0, 0.592157)

[node name="BroadCastLabel" type="Label" parent="BroaderCastLayer/Broad"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -68.0
offset_right = 540.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.916655, 0.844854, 0.633096, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 24
text = "恭喜获得"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FloatBroaderNode" type="Control" parent="BroaderCastLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="BroadCastTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_mode = 1
one_shot = true

[connection signal="timeout" from="BroadCastTimer" to="." method="BroadCastTimerTimeOut"]
